# CapriKit

./: .editorconfig  .gitignore  .gitmodules  .runsettings  CLAUDE.md  CapriKit.sln  CapriKit.slnx  Directory.Build.props  Directory.Packages.props  Generators.Build.props  LICENSE  PLANNING.md  README.md  RESPONSIBLE_USE_OF_AI.md  global.json  xunit.runner.json
.claude/: settings.json
.github/badges/: unit-tests.json
.github/workflows/: unit-tests.yml
Research/: AssetPipeline.md  AssetPipelineArchitecture.md
benchmarks/: 0.1.0.json
research/: AsyncContentPipeline.md  ParallelShaderLoading.md  Quaternions or Rotors.md  README.md  SLUG Text Rendering.md  SuperCompressedPlan.md  TextureProcessing.md
source/CapriKit.AssetPipeline/: Asset.cs  AssetCache.cs  AssetDecoder.cs  AssetEncoder.cs  AssetId.cs  AssetManager.cs  AssetTranscoder.cs  AssetUtilities.cs  CapriKit.AssetPipeline.csproj  Dependency.cs  Envelope.cs  IAssetCompiler.cs  IAssetTranscoder.cs  NoSettingsTranscoder.cs  Reloadable.cs  ServiceCollectionExtensions.cs
source/CapriKit.AssetPipeline.DirectX11/: AssetManagerExtensions.cs  CapriKit.AssetPipeline.DirectX11.csproj
source/CapriKit.Benchmarks/: CapriKit.Benchmarks.csproj  Program.cs  TestBenchmark.cs
source/CapriKit.Build/: BuildLogger.cs  BuildTaskResult.cs  CapriKit.Build.csproj  DotNetManager.cs  IProgressTracker.cs  MSBuildFileLogger.cs  MSBuildManager.Test.cs  MSBuildManager.cs  MSBuildManager2.cs  MSBuildStreamLogger.cs  README.md  SemVer.cs  WellKnownConfigurations.cs
source/CapriKit.CommandLine/: ArgsParser.cs  CapriKit.CommandLine.csproj  CommandLineHelp.cs  FlagAttribute.cs  FlagInfo.cs  Utilities.cs  VerbAttribute.cs  VerbGenerator.cs  VerbInfo.cs
source/CapriKit.CommandLine.Generator/: CapriKit.CommandLine.Generator.csproj  FlagProperty.cs  Utilities.cs  VerbClass.cs  VerbGenerator.cs
source/CapriKit.CommandLine.Types/: AVerbExecuter.cs  AVerbExecutor.cs  ArgsParser.cs  HelpPrinter.cs  VerbAttribute.cs
source/CapriKit.DirectX11/: CapriKit.DirectX11.csproj  Device.cs  DeviceResource.cs  FormatExtensions.cs  HeadlessDevice.cs  README.md  SwapChain.cs
source/CapriKit.Generators.HLSL/: CapriKit.Generators.HLSL.csproj  ConfigTypeGenerator.cs  ConfigUtils.cs  GeneratorConfiguration.cs  README.md  (+12 more)
source/CapriKit.SuperCompressed.Native/: CMakeLists.txt  README.md  build.ps1  exports.def
(+416 files in other folders)
