# Builds caprikit_basisu.dll: basis_universal's plain-C API (the bu_*/bt_* functions)
# compiled into a shared library for P/Invoke from CapriKit.SuperCompressed.
#
# The basis_universal submodule is never modified. Its own CMake build provides the
# basisu_encoder static library, so upstream maintains the source list and compiler flags.
# See README.md for how to build and how to update to a newer basis_universal.
cmake_minimum_required(VERSION 3.20)

# Use a static CRT (/MT) so the DLL has no Visual C++ redistributable dependency.
# Must be set before the first project() call. Safe across the DLL boundary because
# all native memory is allocated and freed on the native side of the C API.
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

project(caprikit_basisu C CXX)

# Same C++ standard as upstream; their CMAKE_CXX_STANDARD is directory-scoped
# and does not reach our target.
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BASISU_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../external/basis_universal)

# Pin the upstream build options we rely on. The compile definitions on our target
# below must stay consistent with these: upstream applies BASISD_SUPPORT_KTX2_ZSTD and
# BASISU_SUPPORT_SSE per-directory/per-target, so our target does not inherit them.
set(BASISU_EXAMPLES OFF CACHE BOOL "" FORCE)
set(BASISU_ZSTD ON CACHE BOOL "" FORCE)
set(BASISU_SSE ON CACHE BOOL "" FORCE)
set(BASISU_OPENCL OFF CACHE BOOL "" FORCE)

# EXCLUDE_FROM_ALL: only build what caprikit_basisu links against (basisu_encoder),
# not the basisu command line tool.
add_subdirectory(${BASISU_ROOT} basis_universal EXCLUDE_FROM_ALL)

# BU_WASM_EXPORT expands to plain `extern "C"` on MSVC (no __declspec(dllexport)),
# so exports.def supplies the DLL exports. It is (re)generated by build.ps1 from the
# BU_WASM_EXPORT declarations in the two C API headers.
add_library(caprikit_basisu SHARED
    ${BASISU_ROOT}/encoder/basisu_wasm_api.cpp
    ${BASISU_ROOT}/encoder/basisu_wasm_transcoder_api.cpp
    exports.def)

target_compile_definitions(caprikit_basisu PRIVATE
    BASISD_SUPPORT_KTX2_ZSTD=1
    BASISU_SUPPORT_SSE=1)

target_link_libraries(caprikit_basisu PRIVATE basisu_encoder)
